change logo path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>		
-	<div class="header-image"><img src="Pictures/logo.jpg" alt="" width="1055" height="347"></div>
+	<div class="header-image"><img src="images/logo.jpg" alt="" width="1055" height="347"></div>
 	<div id="social-media">
 			<div class="social-icon"><a href="https://en-gb.facebook.com/login/"><img src="images/facebook.png" width="512" height="512" alt="facebook"></a></div>
 			<div class="social-icon"><a href="https://www.instagram.com/"><img src="images/instagram.png" width="512" height="512" alt="instagram"></a></div>
